--- a/style.css
+++ b/style.css
@@ -10,7 +10,49 @@
 
 body{
 font-family: Barlow;
+}
 
+.menu_icon .hori_nav{
+   display: none;
+}
+.mob_nav{
+    background-color: white;
+    position:absolute;
+    width: 85%;
+    top: 5em;
+    left: 22%;
+    padding: 1.4em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-transform: uppercase;
+    font-family: Barlow Condensed;
+    font-weight: 500;
+    letter-spacing: 1.5px;
+    font-size: 1.3em;
+    box-shadow:1px 1px 3px hsl(231, 7%, 65%), -1px -1px 3px hsl(231, 7%, 65%);
+    display: none;  
+    /* max-width: 248px; */
+}
+
+.mob_nav ul{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 85%;
+}
+
+.mob_nav .section1{
+   border-bottom: 1px solid hsl(231, 7%, 65%);  
+}
+
+
+.mob_nav li{
+    width: 55%;
+    list-style-type: none;
+    margin: 0.5em;
 }
 
 .main_container{
@@ -21,7 +63,7 @@ font-family: Barlow;
 
 .svg_container{
     margin: 2.5em 0;
-    width:95vw;
+    width:91.5vw;
     overflow: hidden;
   /* border: 1px solid cyan; */
 }
@@ -129,8 +171,496 @@ font-family: Barlow;
 }
 
 
+@media screen and (min-width:273px) and (max-width:343px){    
+.svg_container{
+    margin: 1.5em 0 0.2em;
+    width:95vw;
+    overflow: hidden;
+  /* border: 1px solid hotpink; */
+}
+
+
+.lower_container .col1{
+    padding: 0.25em 0.65em;
+    font-size: 0.73em;
+  }
+  
+  .lower_container .col2{
+      /* border:1px solid orange; */
+     letter-spacing: 1.5px;
+     font-size: 0.78em;
+    }
+  
+   .buttons{
+       flex-direction: column;
+   } 
+
+   .btn1{
+       margin: 1em;
+    padding: 0.7em 0.8em;
+    letter-spacing: 1.4px;
+    font-size: 0.8em;
+}
+
+.btn2{
+    padding: 0.7em 0.8em;
+    letter-spacing: 1.4px;
+    font-size: 0.8em;
+}
+}
+
+ @media screen and (min-width:470px) and (max-width:625px){
+   /* body{
+       background-color: cyan;
+   } */
+   .menu_icon img{
+       display: none;
+   }
+   .menu_icon{
+       width: 65%;
+       /* border: 1px solid hotpink; */
+   }
+
+   .menu_icon .hori_nav{
+       text-transform: uppercase;
+       /* border: 1px solid black; */
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        list-style-type:none;
+        line-height: 2em;
+   }
+
+   .hori_nav li:hover{
+    cursor: pointer;
+    border-bottom: 1px solid hsl(231, 7%, 65%);  
+}
+
+ }
 
 
 
+ 
+ @media screen and (min-width:625px) and (max-width:848px){
+    .menu_icon img{
+        display: none;
+    }
+    .menu_icon{
+        width: 55%;
+        /* border: 1px solid hotpink; */
+    }
+ 
+    .menu_icon .hori_nav{
+        text-transform: uppercase;
+        /* border: 1px solid black; */
+         display: flex;
+         align-items: center;
+         justify-content: space-around;
+         list-style-type:none;
+         line-height: 2em;
+    }
+ 
+    .hori_nav li:hover{
+     cursor: pointer;
+     border-bottom: 1px solid hsl(231, 7%, 65%);  
+ }
 
 
+ .main_container{
+    margin: 2em auto;
+    width: 90%;
+   
+}
+    .body_section{
+        width: 95vw;
+        margin: 5em auto;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        overflow: hidden;
+    }
+
+    .body_section .lower_container{
+        width:80%;
+        order: 1;
+    }
+     .body_section .svg_container{
+         position: relative;
+         top: 0em;
+         left: 3%;
+         float: right;
+         height: auto;
+         order: 2;
+         transform: scale(1.1);
+     }
+   
+ 
+.svg{
+    overflow: hidden;
+    margin-top: 1em;
+    width: 185%;
+    height: 245px;
+    /* min-height: 145px; */
+    background: url("./images/illustration-devices.svg");
+    background-repeat: no-repeat;
+    background-size: contain;
+    transform: scale(1);
+    /* border: 1px solid magenta; */
+}
+
+
+.lower_container .col1{
+    padding: 0.25em 0.65em;
+    font-size: 0.73em;
+  }
+  
+  .lower_container .col2{
+      /* border:1px solid orange; */
+     letter-spacing: 1.5px;
+     font-size: 0.78em;
+    }
+  
+   .buttons{
+       flex-direction: column;
+   } 
+
+   .btn1{
+       margin: 1em;
+    padding: 0.7em 0.8em;
+    letter-spacing: 1.4px;
+    font-size: 0.8em;
+}
+
+.btn2{
+    padding: 0.7em 0.8em;
+    letter-spacing: 1.4px;
+    font-size: 0.8em;
+}
+  }
+ 
+ 
+ 
+ 
+ @media screen and (min-width:848px) and (max-width:942px){
+    .menu_icon img{
+        display: none;
+    }
+    .menu_icon{
+        width: 55%;
+        /* border: 1px solid hotpink; */
+    }
+ 
+    .menu_icon .hori_nav{
+        text-transform: uppercase;
+        /* border: 1px solid black; */
+         display: flex;
+         align-items: center;
+         justify-content: space-around;
+         list-style-type:none;
+         line-height: 2em;
+    }
+ 
+    .hori_nav li:hover{
+     cursor: pointer;
+     border-bottom: 1px solid hsl(231, 7%, 65%);  
+ }
+
+
+ .main_container{
+    margin: 2em auto;
+    width: 90%;
+   
+}
+    .body_section{
+        width: 95vw;
+        margin: 5em auto;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        overflow: hidden;
+    }
+
+    .body_section .lower_container{
+        width:70%;
+        order: 1;
+    }
+
+     .body_section .svg_container{
+        position: relative;
+        top: 0em;
+        left: 10%;
+        float: right;
+        height: auto;
+        order: 2;
+        transform: scale(1.3);
+    }
+ 
+.svg{
+    overflow: hidden;
+    margin-top: 1em;
+    width: 185%;
+    height: 245px;
+    /* min-height: 145px; */
+    background: url("./images/illustration-devices.svg");
+    background-repeat: no-repeat;
+    background-size: contain;
+    transform: scale(1);
+    /* border: 1px solid magenta; */
+}
+
+
+.lower_container .col1{
+    padding: 0.25em 0.65em;
+    font-size: 0.73em;
+  }
+  
+  .lower_container .col2{
+      /* border:1px solid orange; */
+     letter-spacing: 1.5px;
+     font-size: 0.78em;
+    }
+  
+  }
+ 
+ 
+  @media screen and (min-width:1102px){
+      .main_container{
+          padding: 1.6em 2em;
+      }
+      .menu_icon img{
+        display: none;
+    }
+    .menu_icon{
+        width: 55%;
+        /* border: 1px solid hotpink; */
+    }
+ 
+    .menu_icon .hori_nav{
+        text-transform: uppercase;
+        /* border: 1px solid black; */
+         display: flex;
+         align-items: center;
+         justify-content: space-around;
+         list-style-type:none;
+         line-height: 2em;
+    }
+ 
+    .hori_nav li:hover{
+     cursor: pointer;
+     border-bottom: 1px solid hsl(231, 7%, 65%);  
+ }
+
+
+ .main_container{
+    margin: 2em auto 0;
+    width: 90%;
+   
+}
+    .body_section{
+        width: 108.6%;
+        margin: 5em auto;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        overflow: hidden;
+    }
+
+    .body_section .lower_container{
+        width:70%;
+        order: 1;
+    }
+
+     .body_section .svg_container{
+        position: relative;
+        top: 0em;
+        left:28%;
+        float: right;
+        height: auto;
+        order: 2;
+        transform: scale(1.4);
+    }
+ 
+.svg{
+    overflow: hidden;
+    margin-top: 1em;
+    width: 185%;
+    height: 245px;
+    /* min-height: 145px; */
+    background: url("./images/illustration-devices.svg");
+    background-repeat: no-repeat;
+    background-size: contain;
+    transform: scale(1.01);
+    /* border: 1px solid magenta; */
+}
+.lower_container{
+    margin-left: 5em;
+    max-width: 375px;
+    overflow: hidden;
+}
+
+.lower_container .col1{
+    padding: 0.25em 0.65em;
+    font-size: 1em;
+  }
+  
+  .lower_container .col2{
+      /* border:1px solid orange; */
+     letter-spacing: 1.5px;
+     font-size:1.1em;
+    }
+   
+    .para2{
+        margin: 1em 0;
+        /* border: 1px solid hotpink; */
+        font-family:Barlow Condensed;
+       font-weight: bolder;
+        font-size:2.5em;
+     color:hsl(230, 29%, 20%);
+    }
+  
+    .para3{
+      font-size:1.2em;
+      color: hsl(230, 11%, 40%);
+      font-weight: 400;
+      text-transform: none;
+     }
+  
+  
+     .buttons{
+        display: flex;
+        justify-content: space-around;
+        margin-top: 3em;
+    }
+    
+    .btn1{
+        padding: 1em 1.3em;
+    }
+ 
+    .btn2{
+        padding: 0 1em;
+     letter-spacing: 1.4px;
+ }
+
+  }
+
+  
+  @media screen and (min-width:942px) and (max-width:1102px){
+    .main_container{
+        padding: 1.6em 2em;
+    }
+    .menu_icon img{
+      display: none;
+  }
+  .menu_icon{
+      width: 55%;
+      /* border: 1px solid hotpink; */
+  }
+
+  .menu_icon .hori_nav{
+      text-transform: uppercase;
+      /* border: 1px solid black; */
+       display: flex;
+       align-items: center;
+       justify-content: space-around;
+       list-style-type:none;
+       line-height: 2em;
+  }
+
+  .hori_nav li:hover{
+   cursor: pointer;
+   border-bottom: 1px solid hsl(231, 7%, 65%);  
+}
+
+
+.main_container{
+  margin: 2em auto 0;
+  width: 90%;
+ 
+}
+
+  .body_section{
+      width: 109.5%;
+      margin: 5em auto;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      overflow: hidden;
+  }
+
+  .body_section .lower_container{
+      width:70%;
+      order: 1;
+  }
+
+   .body_section .svg_container{
+      position: relative;
+      top: 0em;
+      left: 15%;
+      float: right;
+      height: auto;
+      order: 2;
+      transform: scale(1.31);
+  }
+
+.svg{
+  overflow: hidden;
+  margin-top: 1em;
+  width: 195%;
+  height: 245px;
+  /* min-height: 145px; */
+  background: url("./images/illustration-devices.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  transform: scale(1.01);
+  /* border: 1px solid magenta; */
+}
+.lower_container{
+  margin-left: 5em;
+  max-width: 375px;
+    overflow: hidden;
+}
+
+.lower_container .col1{
+  padding: 0.25em 0.65em;
+  font-size: 1em;
+}
+
+.lower_container .col2{
+    /* border:1px solid orange; */
+   letter-spacing: 1.5px;
+   font-size:1.1em;
+  }
+ 
+  .para2{
+      margin: 1em 0;
+      /* border: 1px solid hotpink; */
+      font-family:Barlow Condensed;
+     font-weight: bolder;
+      font-size:2.5em;
+   color:hsl(230, 29%, 20%);
+  }
+
+  .para3{
+    font-size:1.2em;
+    color: hsl(230, 11%, 40%);
+    font-weight: 400;
+    text-transform: none;
+   }
+
+
+   .buttons{
+      display: flex;
+      justify-content: space-around;
+      margin-top: 3em;
+  }
+  
+  .btn1{
+      padding: 1em 1.3em;
+  }
+
+  .btn2{
+      padding: 0 1em;
+   letter-spacing: 1.4px;
+}
+
+}
