--- a/style.css
+++ b/style.css
@@ -170,6 +170,11 @@ font-family: Barlow;
     font-weight: 700;
 }
 
+.btn1:hover, .btn2:hover{
+    opacity: 0.7;
+    cursor: pointer;
+}
+
 
 @media screen and (min-width:273px) and (max-width:343px){    
 .svg_container{
@@ -431,7 +436,7 @@ font-family: Barlow;
         display: none;
     }
     .menu_icon{
-        width: 55%;
+        width: 40%;
         /* border: 1px solid hotpink; */
     }
  
@@ -552,7 +557,7 @@ font-family: Barlow;
       display: none;
   }
   .menu_icon{
-      width: 55%;
+      width: 45%;
       /* border: 1px solid hotpink; */
   }
 
